[package]
name = "lang3"
version = "0.1.0"
authors = ["josh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3.8", features = ["thread-pool"]}
chashmap = "2.2.2"
maplit = "1.0.2"
libffi = "1.0.0"
libloading = "0.6"


[dev-dependencies]
criterion = "0.3.3"
lang3 = {path = "."}

[[bench]]
name = "query_overhead"
harness = false
